# nonebot-plugin-getbapics

./: LICENSE  README.md  __init__.py  config.py  pyproject.toml  utils.py
nonebot-plugin-getbapics/: __init__.py  config.py
nonebot-plugin-getbapics/Debug/: show_database.py
nonebot_plugin_getbapics/: __init__.py  config.py  utils.py
